# PDC-Glossary-Generator

./: .gitattributes  .gitignore  README.md  Workshop-Glossary-Generator-1_6_20.docx  install-into-pdc-demo.sh  install-pdc-demo.sh  install-scenario.ps1  install-scenario.sh  pdc-reset.sh  pyproject.toml  reset-scenario.ps1  reset-scenario.sh
courseware/: PDC-Users-All-Scenarios.csv  PDC-Users-All-Scenarios.md  README.md
courseware/AWC/: AWC-PDC-Course-Plan.docx  CHANGES.md  Course-Overview-and-Outcomes.pptx  Glossary-Generator-1_6_20.pptx  Glossary-Generator-LLM-and-Review.md  Glossary-Generator-Tags-and-Domain-Pack.md  PDC-Object-Stores-AWS-S3-MinIO.md  README.md  network.txt
courseware/CSCU/: Glossary-Generator-LLM-and-Review.md  Glossary-Generator-Tags-and-Domain-Pack.md  PDC-Object-Stores-AWS-S3-MinIO.md  README.md  Workshop-Glossary-Generator-CSCU.docx  Workshop-Glossary-Generator-CSCU.md
data_sources/: README.md
docs/: CHALLENGE-AND-GOAL.md  CHANGELOG.md  GUIDE.md  INSTALL.md  MANIFEST.md  PDC-VM-TROUBLESHOOTING.md  REFERENCE.md  REVIEW.md  SUPPLEMENT.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
glossary_generator/: .dockerignore  .env.example  .gitignore  CHALLENGE-AND-GOAL.md  CHANGELOG.md  Dockerfile  GUIDE.md  INSTALL.md  README.md  api.py  app.py  build_roster.py  defqa.py  domain_pack.json  llm.py  llm_detect.py  packgen.py  pdc_api.py  policy_draft.py  requirements.txt  run.bat  run.ps1  run.sh  selftest.py  similarity.py  suggester.py  tagdict.py  v3_selftest.py
pdc_client/: README.md  apply.py  terms.py
(+484 files in other folders)
