[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdc-client"
version = "1.0.0"
description = "Shared Pentaho Data Catalog public-API client (stdlib-only), plus the Glossary Generator app that ships it"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
packages = ["pdc_client"]

[tool.pytest.ini_options]
testpaths = ["glossary_generator/tests"]
